<resources>
    <string name="app_name">Cos-Aiko</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="title_activity_swipe_page">swipe_page</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!--CALENDAR-->
    <string name="month_year">mar 2022</string>
    <string name="weekday0">SUN</string>
    <string name="weekday1">MON</string>
    <string name="weekday2">TUE</string>
    <string name="weekday3">WED</string>
    <string name="weekday4">THU</string>
    <string name="weekday5">FRI</string>
    <string name="weekday6">SAT</string>
    <string name="day1">1</string>
    <string name="day2">2</string>
    <string name="day3">3</string>
    <string name="day4">4</string>
    <string name="day5">5</string>
    <string name="day6">6</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calendar">calendar</string>
    <string name="findpeople">findpeople</string>
    <string name="title_activity_tab_page">TabPage</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Calendar">Calendar</string>
    <string name="Find_People">Find_People</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="Email">Email Address</string>
    <string name="fname">First name</string>
    <string name="lname">Last name</string>
    <string name="prev_month">TODO</string>
    <string name="pick_time">pick_time</string>

    <string name="eventset">Selected Date</string>
    <string name="create_event">create_event</string>
    <string name="edit_event">edit_event</string>
    <string name="event_updated">event_update</string>
    <string name="event_deleted">event_delete</string>
    <string name="event_created">event_create</string>
    <string name="warning_missing_calendar">err_calendar_no</string>
    <string name="confirm_delete">delete_conf</string>
    <string name="date">Date</string>
    <string name="calendar_button">Calendar</string>


</resources>