<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Calendar">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/day_of_week_padding_vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_previous_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:contentDescription="@string/prev_month"
            android:paddingLeft="@dimen/space_2x"
            android:paddingRight="@dimen/space_2x"
            android:src="@drawable/ic_chevron_left_gray"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/monthYearTV"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:text="@string/month_year"
            android:textAlignment="center"
            android:textColor="@color/purple_700"
            android:textSize="20sp" />

        <!--            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />-->
        <ImageView
            android:id="@+id/iv_next_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:paddingLeft="@dimen/space_2x"
            android:paddingRight="@dimen/space_2x"
            android:src="@drawable/ic_chevron_right_gray" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="118dp"
        android:layout_marginTop="168dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/weekday0"
            android:textAlignment="center"
            android:textColor="@color/teal_700"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/weekday1"
            android:textAlignment="center"
            android:textColor="@color/teal_700"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/weekday2"
            android:textAlignment="center"
            android:textColor="@color/teal_700"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/weekday3"
            android:textAlignment="center"
            android:textColor="@color/teal_700"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/weekday4"
            android:textAlignment="center"
            android:textColor="@color/teal_700"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/weekday5"
            android:textAlignment="center"
            android:textColor="@color/teal_700"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/weekday6"
            android:textAlignment="center"
            android:textColor="@color/teal_700"
            android:textSize="16sp" />

    </LinearLayout>

    <!-- <com.lorentzos.flingswipe.SwipeFlingAdapterView
        android:id="@+id/calendar_view"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:layout_above="@+id/ll_settings"
        android:layout_below="@id/toolbar"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="286dp" />-->

    <androidx.recyclerview.widget.RecyclerView

        android:layout_width="match_parent"
        android:layout_height="280dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>