<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blured_background"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="60dp"

        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_username"
        android:drawablePadding="12dp"
        android:hint="@string/username"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="#69707a"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="10dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="#d6dc1c"
        android:onClick="registerButton"
        android:text="Register"
        android:textColor="#69707a"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lname" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="12dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="#69707a"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/confirmpassword"
        app:layout_constraintTop_toBottomOf="@+id/username"
        tools:layout_editor_absoluteX="10dp" />


    <EditText
        android:id="@+id/confirmpassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="12dp"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="#69707a"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="60dp"

        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="12dp"
        android:hint="@string/Email"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="#69707a"
        android:textSize="14sp"

        app:layout_constraintBottom_toTopOf="@+id/fname"
        app:layout_constraintTop_toBottomOf="@+id/confirmpassword"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/lname"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="12dp"
        android:hint="@string/lname"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="#69707a"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintTop_toBottomOf="@+id/fname"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/fname"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="12dp"
        android:hint="@string/fname"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="#69707a"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/lname"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:layout_editor_absoluteX="0dp" />


</androidx.constraintlayout.widget.ConstraintLayout>